--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Minimal Gulp workflow to compile Sass",
   "keywords": [],
-  "author": "Jessica Chan (Coder Coder)",
+  "author": "Juliana Araujo",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.14.8",
